--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.15",
+    "@types/qs": "^6.9.6",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "jira-dev-tool": "^1.7.61",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
